# Sophonix_Windows

./: .gitignore  CMakeLists.txt  README.md  main.cpp
document/: Sophonix.vsdx
module/SophonixCore/: CMakeLists.txt  sophonixCore.cpp  sophonixCore.h
module/SophonixCore/include/: interface.h  timeLimiter.h  uiRefresh.h
module/SophonixCore/src/: interface.cpp  timeLimiter.cpp  uiRefresh.cpp
module/SophonixShell/: CMakeLists.txt  sophonixShell.cpp  sophonixShell.h
module/SophonixUiBasic/: CMakeLists.txt  qmldir
module/SophonixUiBasic/cpp/include/: colorScheme.h  sizeScheme.h  uiDataType.h  uiGlobalData.h
module/SophonixUiBasic/cpp/src/: colorScheme.cpp  sizeScheme.cpp  uiGlobalData.cpp
module/SophonixUiBasic/qml/: UiButton.qml  UiText.qml  UiView.qml
module/SophonixUiComponent/: CMakeLists.txt  qmldir
module/SophonixUiComponent/Shell/: Shell.qml  ShellInput.qml  ShellInterface.cpp  ShellOutput.qml  shellInterface.h  shellModel.cpp  shellModel.h  shellModelManager.cpp  shellModelManager.h  shellOutputModel.cpp  shellOutputModel.h
module/sophonixUi/: CMakeLists.txt  qmldir
module/sophonixUi/Window/: UiWindow.qml  uiWindowInterface.cpp  uiWindowInterface.h
module/sophonixUi/Window/UiShell/: UiShell.qml  UiShellBackCorner.qml  UiShellBackground.qml  UiShellInterface.cpp  UiShellSurface.qml  uiShellInterface.h
resource/: resSophonix.qrc
utility/AtomixCli/: AtomixCli_global.h  CMakeLists.txt  atomixcli.cpp  atomixcli.h
utility/AtomixCli/include/: cliCommand.h  cliConfig.h  cliLog.h  cliPipeline.h
utility/AtomixCli/src/: cliCommand.c  cliConfig.c  cliLog.c  cliPipeline.c
utility/AtomixThread/: AtomixThread_global.h  CMakeLists.txt
utility/AtomixThread/include/: runnableThread.h
utility/AtomixThread/src/: runnableThread.cpp
